--- a/src/main/java/vista/Menu.form
+++ b/src/main/java/vista/Menu.form
@@ -174,6 +174,9 @@
                   <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="facturacionActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="cierre">
               <Properties>
