--- a/src/main/java/InternalView/VerInventario.form
+++ b/src/main/java/InternalView/VerInventario.form
@@ -191,6 +191,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="codigoKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="precio">
               <Properties>
@@ -208,6 +211,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="precioKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="stock">
               <Properties>
@@ -225,6 +231,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="stockKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="categoria">
               <Properties>
@@ -242,6 +251,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="categoriaKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="fecha">
               <Properties>
@@ -318,6 +330,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="nombreKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel6">
               <Properties>
@@ -395,6 +410,9 @@
                     </Property>
                     <Property name="rows" type="int" value="5"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="descripcionKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -439,10 +457,18 @@
                           <Component id="flt_nombre" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
                           <Component id="flt_categoria" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="flt_codigo" min="-2" pref="142" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="flt_codigo" min="-2" pref="142" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+                              <Component id="Filtro" min="-2" pref="149" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
                       <EmptySpace pref="31" max="32767" attributes="0"/>
                       <Component id="btn_filtro" min="-2" pref="94" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
@@ -461,6 +487,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="flt_categoria" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="Filtro" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   </Group>
@@ -559,6 +586,25 @@
                   <Font name="Roboto" size="12" style="0"/>
                 </Property>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="Filtro">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="8">
+                    <StringItem index="0" value="id_producto"/>
+                    <StringItem index="1" value="codigo_barra"/>
+                    <StringItem index="2" value="nombre"/>
+                    <StringItem index="3" value="descripcion"/>
+                    <StringItem index="4" value="precio_unitario"/>
+                    <StringItem index="5" value="stock "/>
+                    <StringItem index="6" value="categoria"/>
+                    <StringItem index="7" value="fecha_creacion"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
